--- a/Unity4_pixeluto.csproj
+++ b/Unity4_pixeluto.csproj
@@ -193,9 +193,6 @@
     <Reference Include="UnityEngine.WindModule">
       <HintPath>D:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.WindModule.dll</HintPath>
     </Reference>
-    <Reference Include="Assembly-CSharp-firstpass">
-      <HintPath>Library/ScriptAssemblies/Assembly-CSharp-firstpass.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
     </Reference>
@@ -287,6 +284,7 @@
   <ItemGroup>
     <Compile Include="Assets\scripts\ButtonColorChange.cs" />
     <Compile Include="Assets\scripts\Camera2DFollow.cs" />
+    <Compile Include="Assets\scripts\CatBehaviour.cs" />
     <Compile Include="Assets\scripts\CoinManager.cs" />
     <Compile Include="Assets\scripts\FallRestarter.cs" />
     <Compile Include="Assets\scripts\HpManager.cs" />
@@ -297,6 +295,7 @@
     <Compile Include="Assets\scripts\TransSceneController.cs" />
     <Compile Include="Assets\scripts\ValueContainer.cs" />
     <Compile Include="Assets\scripts\VictoryManager.cs" />
+    <Compile Include="Assets\scripts\VolumeController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
